--- a/home-stylesheet.css
+++ b/home-stylesheet.css
@@ -57,6 +57,10 @@ text-align:center;
 
 }
 
+.überuns-text > p{
+font-size:large;
+}
+
 h1{
 color: black;
 font-family: Comic Sans MS;
@@ -153,27 +157,4 @@ margin-top: 10px;
   justify-content: center;
   
 
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-footer{
-  background-color:grey;
-  width: 100%;
-  margin:0px;
-  padding-right:100%;
-  height: 3cm;
-  
 }
