edited home-page and attraktionen-page

--- a/home-stylesheet.css
+++ b/home-stylesheet.css
@@ -5,8 +5,19 @@ body {
   background-size: cover;
 }
 
+main{
+  background-color: #FDF4E3;
+  margin-top: 50%;
+  max-width: 100%;
+}
 
-
+.main-section{
+display: flex;
+flex-direction:row;
+flex-wrap: wrap;
+justify-content: center;
+  
+}
 
 header  {
 padding-top: 15px;
@@ -43,87 +54,69 @@ padding-left: 1cm;;
 
 
 
-.container {
-background-color: #f2efe1;
-margin-top: 50%;
-}
-
-
-.überuns-text{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-text-align:center;
-
-}
-
-.überuns-text > p{
-font-size:large;
-}
-
-h1{
-color: black;
-font-family: Comic Sans MS;
-font-size: 500;
-}
 
 
 
 .öffnungszeit-container{
 display: flex;
-flex-direction:row;
-justify-content: space-evenly;
-align-items:center;
+flex-direction:column;
 flex-wrap: wrap;
-margin-top: 10em;
-margin-bottom:5cm;
-
 }
 
 
-.text-left{
+
+.text-top{
 padding-right:0.5cm;
 padding-left:0.5cm;
-margin-bottom:0cm;
+margin-bottom: 15px;
+margin-left: 20px;
 background-color:	rgb(204, 242, 255);
 width: 8cm;
-height: 10cm;
 display: flex;
 flex-direction:row;
 justify-content: space-between;
-border-radius: 20px;
+border-radius: 5px;
 }
 
-.text-left p{
-margin-bottom: 1cm;
+.text-top p{
+margin-bottom: 10px;
 }
 
-.text-left h2{
-margin-bottom:1.5cm;
+.text-top h2{
+margin: bottom 20px;
 }
 
-.text-right{
-margin:0cm;
+.text-top > h1{
+  margin-bottom: 0px;
+}
+
+.text-bottom{
+margin-bottom: 30px;
 padding-right:0.5cm;
 padding-left:0.5cm;
+margin-left: 20px;
 width: 8cm;
-height: 10cm;
 background-color: red;
 max-width: 10cm;
+
+border-radius: 5px;
+}
+
+.text-bottom p{
+margin-bottom: 10px;
 display: flex;
 flex-direction:row;
 justify-content: space-between;
-border-radius: 20px;
+
 }
 
-.text-right p{
-margin-bottom: 1cm;
+.text-bottom h2{
+margin-bottom:20px;
 }
 
-.text-right h2{
-margin-bottom:1.5cm;
+.text-bottom > h1{
+  margin-bottom: 0px;
 }
-
 
 .circle {
 width: 240px;
@@ -144,7 +137,8 @@ flex-wrap: wrap;
 }
 
 .circle p {
-margin-top: 10px;
+margin-top: 5px;
+
 }
 
 
@@ -157,4 +151,58 @@ margin-top: 10px;
   justify-content: center;
   
 
+}
+
+
+#opentime{
+  padding: 10px;
+  justify-content: space-between;
+  color:gold;
+}
+
+
+.left-container{
+  background-color: red;
+  width: 350px;
+  word-wrap: break-word;
+  white-space: normal;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.überuns-text{
+  padding: 10px;
+  text-align: center;
+  word-wrap: break-word;
+  white-space: normal;
+}
+
+.left-container > img{
+  display: block;
+}
+
+.uhrzeit-header{
+  display: flex;
+  align-items: center;
+  background-color: gold;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+.uhrzeit-header > img{
+  margin-right: 0px;
+  padding:20px;
+}
+
+.fakten{
+  display: flex;
+  justify-content: center;
+}
+
+footer{
+  background-color: green;
+  margin: 0px;
+  max-width: 100%;
 }
