--- a/fischarten-stylesheet.css
+++ b/fischarten-stylesheet.css
@@ -10,7 +10,7 @@ body{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background-color: grey;
+    background-color: #FDF4E3;
     margin-top: 50%;
     max-width: 100%;
   
