--- a/fischarten-stylesheet.css
+++ b/fischarten-stylesheet.css
@@ -1,20 +1,70 @@
+body {
+  background-image: url('./img/home-bck.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
 
-body{
-    background-color: aquamarine;
-    max-width: 100%;
-  }
+main{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  background-color: #FDF4E3;
+  margin-top: 50%;
+  max-width: 100%;
+ position: relative;
+
+}
+
+header  {
+padding-top: 15px;
+max-width: 100%;
+background-color:transparent;
+}
+
+
+/*Navigation-bar*/
+.navbar{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+margin: 0px;
+}
+
+.nav-links{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+padding-right:1cm;
+font-size: 20px;
+}
+
+.nav-links > li{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.nav-links a{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.nav-links a:hover{
+  text-decoration-line:none;
+}
+
+.logo > p{
+display: block;
+flex-wrap: nowrap;
+padding-left: 1cm;
+font-size: 25px;
+color: white;
+}
   
-  main{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    background-color: #FDF4E3;
-    margin-top: 50%;
-    max-width: 100%;
   
-  }
   
   .fish-oben{
   margin:1cm;
@@ -33,7 +83,7 @@ body{
   }
   
   .fish-link:hover{
-    background-color: pink;
+    background-color: rgb(177, 248, 177);
    
   }
   
@@ -60,4 +110,57 @@ body{
     margin-left: 20px;
     text-decoration: none;
     color: black;
+  }
+
+  
+/*Footer Bereich*/
+
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: green;
+  margin: 0px;
+  max-width: 100%;
+  max-height: 90px;
+}
+
+
+.first-part{
+  justify-content: flex-start;
+  margin: 0px;
+  padding: 0px;
+  word-wrap: break-word;
+  white-space: normal;
+}
+
+
+.middle-part{
+display: flex;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
+
+
+}
+
+.middle-part > p{
+ padding-left:30px ;
+ padding-right: 30px;
+ word-wrap: break-word;
+  white-space: normal;
+
+  }
+
+.last-part{
+  text-align: center;
+  word-wrap: break-word;
+  white-space: normal;
+    }
+
+  .last-part > br{
+    color: yellow;
+    word-wrap: break-word;
+  white-space: normal;
+
   }
