--- a/home-stylesheet.css
+++ b/home-stylesheet.css
@@ -26,37 +26,47 @@ background-color:transparent;
 }
 
 
-
+/*Navigation-bar*/
 .navbar{
 display: flex;
 flex-direction: row;
 justify-content: space-between;
+margin: 0px;
 }
 
 .nav-links{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 padding-right:1cm;
 font-size: 20px;
 }
 
+.nav-links > li{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .nav-links a{
-  margin-left: 1cm;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .nav-links a:hover{
   text-decoration-line:none;
 }
 
-.logo{
-padding-left: 1cm;;
+.logo > p{
+display: block;
+flex-wrap: nowrap;
+padding-left: 1cm;
+font-size: 25px;
+color: white;
 }
 
 
-
-
-
-
-
-
+/*Main-Section*/
 .öffnungszeit-container{
 display: flex;
 flex-direction:column;
@@ -72,18 +82,21 @@ margin-bottom: 15px;
 margin-left: 20px;
 background-color:	rgb(204, 242, 255);
 width: 8cm;
+max-width: 10cm;
 display: flex;
 flex-direction:row;
 justify-content: space-between;
 border-radius: 5px;
 }
 
-.text-top p{
+.text-top b{
 margin-bottom: 10px;
+justify-content: center;
 }
 
 .text-top h2{
 margin: bottom 20px;
+
 }
 
 .text-top > h1{
@@ -120,6 +133,7 @@ margin-bottom:20px;
 
 .circle {
 width: 240px;
+max-width: 230px;
 height: 240px;
 border-radius: 50%;
 background-color: blue;
@@ -127,7 +141,7 @@ margin: 2cm;
 display: flex;
 justify-content: center;
 align-items: center;
-flex-direction: column;
+flex-direction: row;
 color: white;
 font-size: 20px;
 font-weight: bold;
@@ -171,6 +185,7 @@ margin-top: 5px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  margin-bottom: 15px;
 }
 
 .überuns-text{
@@ -201,8 +216,55 @@ margin-top: 5px;
   justify-content: center;
 }
 
+
+/*Footer Bereich*/
+
 footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: green;
   margin: 0px;
   max-width: 100%;
+  max-height: 30px;
+  font-size:12px;
 }
+
+.first-part{
+  justify-content: flex-start;
+  margin: 0px;
+  padding: 0px;
+  word-wrap: break-word;
+  white-space: normal;
+}
+
+
+.middle-part{
+display: flex;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
+
+
+}
+
+.middle-part > p{
+ padding-left:30px ;
+ padding-right: 30px;
+ word-wrap: break-word;
+  white-space: normal;
+
+  }
+
+.last-part{
+  text-align: center;
+  word-wrap: break-word;
+  white-space: normal;
+    }
+
+  .last-part > br{
+    color: yellow;
+    word-wrap: break-word;
+  white-space: normal;
+
+  }
