--- a/home-stylesheet.css
+++ b/home-stylesheet.css
@@ -16,6 +16,7 @@ display: flex;
 flex-direction:row;
 flex-wrap: wrap;
 justify-content: center;
+
   
 }
 
@@ -71,65 +72,63 @@ color: white;
 display: flex;
 flex-direction:column;
 flex-wrap: wrap;
+
+padding-top: 0px;
+padding-left:25px;
 }
 
-
-
-.text-top{
-padding-right:0.5cm;
-padding-left:0.5cm;
-margin-bottom: 15px;
-margin-left: 20px;
-background-color:	rgb(204, 242, 255);
-width: 8cm;
-max-width: 10cm;
-display: flex;
-flex-direction:row;
-justify-content: space-between;
-border-radius: 5px;
-}
-
-.text-top b{
-margin-bottom: 10px;
-justify-content: center;
-}
-
-.text-top h2{
-margin: bottom 20px;
+.uhrzeit-header{
+  display: flex;
+  align-items: center;
+  margin-bottom: 3px;
+  padding: 0px;
+  background-color: gold;
 
 }
 
-.text-top > h1{
+.uhrzeit-header > img{
+  margin-right: 0px;
+  padding:20px;
+}
+
+
+.interestContainer {
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-evenly;
+}
+
+.intrestCard {
+  width: 350px;
+  background-color: #0099ff;
+  margin: 10px;
+  box-shadow: 0 0 15px black;
+  border-radius: 10px 10px 0 0;
+}
+
+.intrestCard:hover {
+  box-shadow: 0 0 35px black;
+  transition-duration: 300ms;
+  transform: scale(1.05);
+}
+
+.interestContainer {
+  max-width: 100vw;
+  max-height: 100vh;
+  margin-top: 75px;
+}
+
+.imageWithTextRight {
+  margin-bottom:25px ;
+}
+
+.imageWithTextRight > h3{
   margin-bottom: 0px;
+  margin-top: 15px;
+  background-color: rgba(224, 224, 58, 0.658);
+  padding: 10px;
 }
 
-.text-bottom{
-margin-bottom: 30px;
-padding-right:0.5cm;
-padding-left:0.5cm;
-margin-left: 20px;
-width: 8cm;
-background-color: red;
-max-width: 10cm;
-
-border-radius: 5px;
-}
-
-.text-bottom p{
-margin-bottom: 10px;
-display: flex;
-flex-direction:row;
-justify-content: space-between;
-
-}
-
-.text-bottom h2{
-margin-bottom:20px;
-}
-
-.text-bottom > h1{
-  margin-bottom: 0px;
-}
 
 .circle {
 width: 240px;
@@ -176,7 +175,7 @@ margin-top: 5px;
 
 
 .left-container{
-  background-color: red;
+  background-color: rgba(224, 224, 58, 0.658);
   width: 350px;
   word-wrap: break-word;
   white-space: normal;
@@ -199,22 +198,15 @@ margin-top: 5px;
   display: block;
 }
 
-.uhrzeit-header{
-  display: flex;
-  align-items: center;
-  background-color: gold;
-  margin-bottom: 10px;
-  margin-left: 20px;
-}
-.uhrzeit-header > img{
-  margin-right: 0px;
-  padding:20px;
-}
+
 
 .fakten{
   display: flex;
-  justify-content: center;
+  text-align: center;
+color: blue;
 }
+
+
 
 
 /*Footer Bereich*/
