--- a/fisch.css
+++ b/fisch.css
@@ -29,44 +29,53 @@ body {
   }
   
   
-  /*Navigation-bar*/
-  .navbar{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 0px;
-  }
-  
-  .nav-links{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  padding-right:1cm;
-  font-size: 20px;
-  }
-  
-  .nav-links > li{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .nav-links a{
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  .nav-links a:hover{
-    text-decoration-line:none;
-  }
-  
-  .logo > p{
-  display: block;
-  flex-wrap: nowrap;
-  padding-left: 1cm;
-  font-size: 25px;
-  color: white;
-  }
+/*Navigation-bar*/
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: transparent;
+	color: white;
+	font-family: Arial, sans-serif;
+	padding: 10px;
+}
+
+.logo {
+	font-size: 24px;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
+}
+
+.nav-links {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	list-style: none;
+	margin-right: 10px;
+}
+
+.nav-links li {
+	margin: 0 5px;
+}
+
+.nav-links li a {
+	font-size: 16px;
+	text-decoration: none;
+	color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.nav-toggle {
+	display: none;
+}
+
+@media screen and (max-width: 355px) {
+	.nav-links {
+		display: none;
+	}
+}
 
 
 /*Fischarten-Info Bereich*/
@@ -136,55 +145,40 @@ margin: 0px;
   .card-text p {
     margin: 0;
   }
-
+  
 /*Footer Bereich*/
-
 footer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: green;
-    margin: 0px;
-    max-width: 100%;
-    max-height: 30px;
-    font-size:12px;
-  }
-  
-  .first-part{
-    justify-content: flex-start;
-    margin: 0px;
-    padding: 0px;
-    word-wrap: break-word;
-    white-space: normal;
-  }
-  
-  
-  .middle-part{
   display: flex;
-    align-items: center;
-    margin: 0px;
-    padding: 0px;
-  
-  
-  }
-  
-  .middle-part > p{
-   padding-left:30px ;
-   padding-right: 30px;
-   word-wrap: break-word;
-    white-space: normal;
-  
-    }
-  
-  .last-part{
-    text-align: center;
-    word-wrap: break-word;
-    white-space: normal;
-      }
-  
-    .last-part > br{
-      color: yellow;
-      word-wrap: break-word;
-    white-space: normal;
-  
-    }
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(122, 220, 43);
+  margin: 0px;
+  max-width: 100%;
+  height: 10px;
+  font-size:13px;
+}
+
+.footer-logo{
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.footer-logo > img{
+  margin-left: 10px;
+}
+
+
+.footer-impdat{
+  display: flex;
+  align-items: center;
+}
+
+.footer-impdat > p{
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0px;
+}
+
+.footer-impdat > p > a {
+  color: black;
+}
