--- a/fischarten-stylesheet.css
+++ b/fischarten-stylesheet.css
@@ -26,42 +26,51 @@ background-color:transparent;
 
 
 /*Navigation-bar*/
-.navbar{
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-margin: 0px;
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: transparent;
+	color: white;
+	font-family: Arial, sans-serif;
+	padding: 10px;
 }
 
-.nav-links{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-padding-right:1cm;
-font-size: 20px;
+.logo {
+	font-size: 24px;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
 }
 
-.nav-links > li{
-  display: flex;
-  flex-wrap: wrap;
+.nav-links {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	list-style: none;
+	margin-right: 10px;
 }
 
-.nav-links a{
-  padding-left: 20px;
-  padding-right: 20px;
+.nav-links li {
+	margin: 0 5px;
 }
 
-.nav-links a:hover{
-  text-decoration-line:none;
+.nav-links li a {
+	font-size: 16px;
+	text-decoration: none;
+	color: white;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.logo > p{
-display: block;
-flex-wrap: nowrap;
-padding-left: 1cm;
-font-size: 25px;
-color: white;
+.nav-toggle {
+	display: none;
+}
+
+@media screen and (max-width: 355px) {
+	.nav-links {
+		display: none;
+	}
 }
   
   
@@ -83,7 +92,7 @@ color: white;
   }
   
   .fish-link:hover{
-    background-color: rgb(177, 248, 177);
+    background-color: rgba(131, 223, 56, 0.89);
    
   }
   
@@ -112,55 +121,40 @@ color: white;
     color: black;
   }
 
-  
-/*Footer Bereich*/
+ /*Footer Bereich*/
 
 footer{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: green;
+  background-color: rgb(122, 220, 43);
   margin: 0px;
   max-width: 100%;
-  max-height: 90px;
+  height: 10px;
+  font-size:13px;
 }
 
-
-.first-part{
-  justify-content: flex-start;
-  margin: 0px;
-  padding: 0px;
-  word-wrap: break-word;
-  white-space: normal;
-}
-
-
-.middle-part{
-display: flex;
+.footer-logo{
+  display: flex;
   align-items: center;
-  margin: 0px;
-  padding: 0px;
-
-
+  text-align: center;
+}
+.footer-logo > img{
+  margin-left: 10px;
 }
 
-.middle-part > p{
- padding-left:30px ;
- padding-right: 30px;
- word-wrap: break-word;
-  white-space: normal;
 
-  }
+.footer-impdat{
+  display: flex;
+  align-items: center;
+}
 
-.last-part{
-  text-align: center;
-  word-wrap: break-word;
-  white-space: normal;
-    }
+.footer-impdat > p{
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0px;
+}
 
-  .last-part > br{
-    color: yellow;
-    word-wrap: break-word;
-  white-space: normal;
-
-  }
+.footer-impdat > p > a {
+  color: black;
+}
