--- a/test.css
+++ b/test.css
@@ -1,59 +1,48 @@
-main {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  column-gap: 20px;
+
+header{
+  max-width: 100%;
+}
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: transparent;
+	color: white;
+	font-family: Arial, sans-serif;
+	padding: 10px;
 }
 
-.interestContainer {
-  display: flex;
-  flex-flow: wrap;
-  justify-content: space-evenly;
+.logo {
+	font-size: 24px;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
 }
 
-.intrestCard {
-  width: 350px;
-  background-color: #0099ff;
-  margin: 10px;
-  box-shadow: 0 0 15px black;
-  border-radius: 10px 10px 0 0;
+.nav-links {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	list-style: none;
+	margin-right: 10px;
 }
 
-.intrestCard:hover {
-  box-shadow: 0 0 35px black;
-  transition-duration: 300ms;
-  transform: scale(1.05);
+.nav-links li {
+	margin: 0 5px;
 }
 
-.interestContainer {
-  max-width: 100vw;
-  max-height: 100vh;
-  margin-top: 75px;
+.nav-links li a {
+	font-size: 16px;
+	text-decoration: none;
+	color: white;
 }
 
-.imageWithTextRight {
-  padding: 45px;
+.nav-toggle {
+	display: none;
 }
 
-
-
-
-
-
-
-
-.price-table {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  width: 100%;
-}
-
-tr,
-td {
-  text-align: center;
-  padding: 50px;
-  font-size: 1.1em;
-  vertical-align: middle;
+@media screen and (max-width: 355px) {
+	.nav-links {
+		display: none;
+	}
 }
