--- a/tickets.css
+++ b/tickets.css
@@ -1,14 +1,20 @@
 body {
-    background-image: url('./img/home-bck.png');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+  background-color: #FDF4E3;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: none;
+  max-width: 100%;
 }
 
-main {
-    background-color: #FDF4E3;
-    margin-top: 50%;
+main{
+    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     max-width: 100%;
+    margin-bottom: 10vh;
 }
 
 .main-section {
@@ -27,42 +33,55 @@ header {
 
 
 /*Navigation-bar*/
-.navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0px;
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: transparent;
+	color: white;
+	font-family: Arial, sans-serif;
+	padding: 10px;
+}
+
+.navbar{
+  margin-bottom: 0px;
+}
+
+.logo {
+	font-size: 24px;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
 }
 
 .nav-links {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-right: 1cm;
-    font-size: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+	list-style: none;
+	margin-right: 10px;
 }
 
-.nav-links>li {
-    display: flex;
-    flex-wrap: wrap;
+.nav-links li {
+	margin: 0 5px;
 }
 
-.nav-links a {
-    padding-left: 20px;
-    padding-right: 20px;
+.nav-links li a {
+	font-size: 16px;
+	text-decoration: none;
+	color: white;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.nav-links a:hover {
-    text-decoration-line: none;
+.nav-toggle {
+	display: none;
 }
 
-.logo>p {
-    display: block;
-    flex-wrap: nowrap;
-    padding-left: 1cm;
-    font-size: 25px;
-    color: white;
+@media screen and (max-width: 355px) {
+	.nav-links {
+		display: none;
+	}
 }
 
 
@@ -98,60 +117,6 @@ margin-left: 25px;
 }
 
 
-
-/*Footer Bereich*/
-
-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: green;
-    margin: 0px;
-    max-width: 100%;
-    max-height: 30px;
-    font-size: 12px;
-}
-
-.first-part {
-    justify-content: flex-start;
-    margin: 0px;
-    padding: 0px;
-    word-wrap: break-word;
-    white-space: normal;
-}
-
-
-.middle-part {
-    display: flex;
-    align-items: center;
-    margin: 0px;
-    padding: 0px;
-
-
-}
-
-.middle-part>p {
-    padding-left: 30px;
-    padding-right: 30px;
-    word-wrap: break-word;
-    white-space: normal;
-
-}
-
-.last-part {
-    text-align: center;
-    word-wrap: break-word;
-    white-space: normal;
-}
-
-.last-part>br {
-    color: yellow;
-    word-wrap: break-word;
-    white-space: normal;
-
-}
-
-
 .card {
     display: inline-block;
     border: 1px solid #ccc;
@@ -159,7 +124,8 @@ footer {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     width: 300px;
-   
+    margin-top: 0px;
+    margin-left: 20px;
   }
   
   .card img {
@@ -177,4 +143,44 @@ footer {
   
   .card-text p {
     margin: 0;
+  }
+  
+
+
+/*Footer Bereich*/
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(122, 220, 43);
+    margin: 0px;
+    max-width: 100%;
+    height: 10px;
+    font-size:13px;
+  }
+  
+  .footer-logo{
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+  .footer-logo > img{
+    margin-left: 10px;
+  }
+  
+  
+  .footer-impdat{
+    display: flex;
+    align-items: center;
+  }
+  
+  .footer-impdat > p{
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0px;
+  }
+  
+  .footer-impdat > p > a {
+    color: black;
   }
