--- a/fisch.css
+++ b/fisch.css
@@ -10,7 +10,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     background-color: #FDF4E3;
-    max-width: 100%;
+    min-width: 100%;
     padding-bottom: 50px;
     padding-top:0px ;
     margin: 0px;
@@ -129,6 +129,12 @@ float: bottom;
 margin: 0px;    
 }
 
+.fischBio-container{
+  display: flex;
+  flex-direction: row;
+  
+}
+
 .thema-container{
     display: flex;
     background-color: #FDF4E3;
@@ -196,7 +202,7 @@ footer{
   justify-content: space-between;
   background-color: rgb(122, 220, 43);
   margin: 0px;
-  max-width: 100%;
+  min-width: 100%;
   height: 10px;
   font-size:13px;
 }
