--- a/fischarten-stylesheet.css
+++ b/fischarten-stylesheet.css
@@ -9,7 +9,7 @@ main{
   align-items: center;
   justify-content: center;
   background-color: #FDF4E3;
-  max-width: 100%;
+  min-width: 100%;
  position: relative;
 
 }
