--- a/attraktionen.css
+++ b/attraktionen.css
@@ -13,7 +13,7 @@ main{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 100%;
+    min-width: 100%;
     margin-bottom: 10vh;
 }
 /*Header Part*/
@@ -26,7 +26,7 @@ main{
   padding: 10px;
   
   color: #fff;
-  max-width: 100%;
+  min-width: 100%;
 }
 
 .website-name {
@@ -131,7 +131,6 @@ main{
   margin: 0;
 }
 
-  
 /*Footer Bereich*/
 
 footer{
@@ -140,7 +139,7 @@ footer{
   justify-content: space-between;
   background-color: rgb(122, 220, 43);
   margin: 0px;
-  max-width: 100%;
+  min-width: 100%;
   height: 10px;
   font-size:13px;
 }
@@ -169,3 +168,7 @@ footer{
 .footer-impdat > p > a {
   color: black;
 }
+
+  hr{
+    height: 1.5px;
+  }
