--- a/fischarten-stylesheet.css
+++ b/fischarten-stylesheet.css
@@ -16,15 +16,22 @@ main{
 /*Header Part*/
 .header {
   background-image: url('./img/header-bck-fishtypes.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
+  background-color: none;
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  
   color: #fff;
-  max-width: 100%;
+
 }
+
+
+
+
 
 .website-name {
   font-size: 25px;
@@ -115,8 +122,8 @@ main{
   
   .fish-link{
     background-color: white;
-    padding-bottom: 2cm;
     padding-bottom: 20px;
+    margin: 0;
   }
   
   .fish-link:hover{
@@ -157,7 +164,7 @@ footer{
   justify-content: space-between;
   background-color: rgb(122, 220, 43);
   margin: 0px;
-  max-width: 100%;
+  min-width: 100%;
   height: 10px;
   font-size:13px;
 }
@@ -186,3 +193,7 @@ footer{
 .footer-impdat > p > a {
   color: black;
 }
+
+  hr{
+    height: 1.5px;
+  }
