--- a/fisch.css
+++ b/fisch.css
@@ -155,7 +155,10 @@ margin: 0px;
 .fischinfo-container{
     display: flex;
     flex-direction: column;
-    margin: 30px;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom:30px;
+    margin-left: 15px;
    
 }
 
