--- a/fischarten-stylesheet.css
+++ b/fischarten-stylesheet.css
@@ -1,5 +1,5 @@
 body{
-  max-width: 100%;
+  min-width: 100%;
 }
 
 main{
@@ -10,7 +10,7 @@ main{
   justify-content: center;
   background-color: #FDF4E3;
   min-width: 100%;
- position: relative;
+  position: relative;
 
 }
 /*Header Part*/
@@ -20,7 +20,7 @@ main{
   background-attachment: fixed;
   background-size: cover;
   background-color: none;
-  max-width: 100%;
+  min-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
