--- a/fischarten-stylesheet.css
+++ b/fischarten-stylesheet.css
@@ -1,5 +1,11 @@
 body{
-  min-width: 100%;
+  background-image: url('./img/header-bck-fishtypes.jpg');
+  background-color: #FDF4E3;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: none;
+  max-width: 100%;
 }
 
 main{
@@ -11,11 +17,12 @@ main{
   background-color: #FDF4E3;
   min-width: 100%;
   position: relative;
+  margin-right: 0px;
 
 }
 /*Header Part*/
 .header {
-  background-image: url('./img/header-bck-fishtypes.jpg');
+  
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
