--- a/home-stylesheet.css
+++ b/home-stylesheet.css
@@ -118,7 +118,7 @@ justify-content: center;
 display: flex;
 flex-direction:column;
 flex-wrap: wrap;
-
+justify-content: center;
 padding-top: 0px;
 padding-left:25px;
 }
@@ -190,8 +190,8 @@ height: 215px;
 border-radius: 50%;
 background-color: rgba(214, 214, 6, 0.767);
 margin-bottom: 30px;
-margin-right: 40px;
-margin-left: 40px;
+margin-right: 50px;
+margin-left: 50px;
 margin-top: 35px;
 display: flex;
 justify-content: center;
@@ -210,12 +210,13 @@ margin-top: 5px;
 
 }
 .circles{
-  display:flex;
-  flex-wrap:wrap;
-  flex-direction:row;
-  justify-content: space-between;
- text-align: center;
- margin: 0;
+display:flex;
+flex-wrap:wrap;
+flex-direction:row;
+justify-content: center;
+text-align: center;
+align-items: center;
+margin: 0;
 }
 
 .left-container{
@@ -242,9 +243,29 @@ margin-top: 5px;
   display: block;
 }
 
+.zooMap {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
 
+.image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 
+.image-container img {
+  border-radius: 7px;
+}
 
+.text {
+  margin-top: 7px;
+  text-align: left;
+}
 
 
 /*Footer Bereich*/
