--- a/attraktionen.css
+++ b/attraktionen.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #FDF4E3;
+  background-image: url('./img/header-bck-attraktionen.jpg');
+  
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -8,17 +9,17 @@ body {
 }
 
 main{
-    
+  background-color: #FDF4E3;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     min-width: 100%;
-    margin-bottom: 10vh;
+    margin-bottom:0px;
 }
 /*Header Part*/
 .header {
-  background-image: url('./img/header-bck-attraktionen.jpg');
+ 
   background-size: cover;
   display: flex;
   justify-content: space-between;
